gloo/docs/gloo_routing/virtual_services/security/apikey_auth/test-auth-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  creationTimestamp: null
  name: test-auth
  namespace: gloo-system
spec:
  displayName: test-auth
  virtualHost:
    domains:
      - bar
    routes:
      - matcher:
          prefix: /
        routeAction:
          single:
            upstream:
              name: json-upstream
              namespace: gloo-system
    virtualHostPlugins:
      extensions:
        configs:
          extauth:
            api_key_auth:
              label_selector:
                team: infrastructure
